+ Minor changes and bug fixes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
 Description: This package provides a number of useful utilities for working with formulas, expressions, calls, names, symbols and other R objects.  This package was designed to greatly facilitate symbolic manupulation using native R objects.
 Depends: R (>= 2.9.0), operator.tools(>= 1.1.0), utils, methods
+Suggests: testthat
 License: GPL(>=2)
 URL: http://www.decisionpatterns.com 
 LazyLoad: yes
