--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,37 @@
 Package: formula.tools
 Type: Package
-Title: Utilities for working with formulas, expressions, calls and other R objects
+Title: Utilities for working with formulas, expressions, calls and other R
+    objects
 Version: 1.3.0
 Date: 2011-10-03
-Author: Christopher Brown 
+Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
-Description: This package provides a number of useful utilities for working with formulas, expressions, calls, names, symbols and other R objects.  This package was designed to greatly facilitate symbolic manupulation using native R objects.
-Depends: R (>= 2.9.0), operator.tools(>= 1.2.1), utils, methods
-Suggests: testthat
+Description: This package provides a number of useful utilities for working
+    with formulas, expressions, calls, names, symbols and other R objects.
+    This package was designed to greatly facilitate symbolic manupulation using
+    native R objects.
+Depends:
+    R (>= 2.9.0),
+    operator.tools(>= 1.2.1),
+    utils,
+    methods
+Suggests:
+    testthat
 License: GPL(>=2)
-URL: http://www.decisionpatterns.com 
+URL: http://www.decisionpatterns.com
 LazyLoad: yes
-LazyData: yes 
+LazyData: yes
+Collate:
+    'as.character.formula.R'
+    'get.vars.R'
+    'invert.R'
+    'is.one.sided.R'
+    'lhs.R'
+    'lhs.vars.R'
+    'op.R'
+    'op.type.R'
+    'rhs.R'
+    'rhs.vars.R'
+    'terms.R'
+    'which.class.R'
+    'zzz.R'
