--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: formula.tools
 Type: Package
 Title: Utilities for working with formulas, expressions, calls and other R
     objects
-Version: 1.3.1
-Date: 2012-11-30
+Version: 1.4.0
+Date: 2014-02-25
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
 Description: This package provides a number of useful utilities for working
@@ -11,27 +11,13 @@ Description: This package provides a number of useful utilities for working
     This package was designed to greatly facilitate symbolic manupulation using
     native R objects.
 Depends:
-    R (>= 2.9.0),
+    R (>= 2.14.0),
     operator.tools(>= 1.2.1),
     utils,
     methods
 Suggests:
     testthat
-License: GPL(>=2)
-URL: http://www.decisionpatterns.com
+License: GPL (>= 2)
+URL: https://github.com/decisionpatterns/formula.tools
 LazyLoad: yes
 LazyData: yes
-Collate:
-    'as.character.formula.R'
-    'get.vars.R'
-    'invert.R'
-    'is.one.sided.R'
-    'lhs.R'
-    'lhs.vars.R'
-    'op.R'
-    'op.type.R'
-    'rhs.R'
-    'rhs.vars.R'
-    'terms.R'
-    'which.class.R'
-    'zzz.R'
