--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,17 @@
-exportPattern("^[^\\.]")
+S3method(terms,call)
+S3method(terms,expression)
+export("lhs<-")
+export("op<-")
+export("rhs<-")
+export(get.vars)
+export(invert)
+export(is.cat)
+export(is.cont)
+export(is.one.sided)
+export(is.two.sided)
+export(lhs)
+export(lhs.vars)
+export(op)
+export(op.type)
+export(rhs)
+export(rhs.vars)
