Pre-release version 1.4.0
This version has a documentation problem that still needs to be fixed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,6 @@ Suggests:
     testthat
 License: GPL (>= 2)
 URL: https://github.com/decisionpatterns/formula.tools
+BugReports: https://github.com/decisionpatterns/formula.tools/issues
 LazyLoad: yes
 LazyData: yes
