--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Utilities for working with formulas, expressions, calls and other R
     objects
 Version: 1.4.0
-Date: 2014-02-25
+Date: 2014-03-11
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
 Description: This package provides a number of useful utilities for working
@@ -22,3 +22,23 @@ URL: https://github.com/decisionpatterns/formula.tools
 BugReports: https://github.com/decisionpatterns/formula.tools/issues
 LazyLoad: yes
 LazyData: yes
+Collate:
+    'as.character.formula.R'
+    'catcont.R'
+    'formula.tools-package.R'
+    'get.vars.R'
+    'invert.R'
+    'is.one.sided.R'
+    'is.two.sided.R'
+    'parts.R'
+    'lhs-get.R'
+    'lhs-set.R'
+    'lhs.vars.R'
+    'op-get.R'
+    'op-set.R'
+    'op.type.R'
+    'rhs-get.R'
+    'rhs-set.R'
+    'rhs.vars.R'
+    'terms.R'
+    'zzz.R'
