--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: formula.tools
 Type: Package
 Title: Utilities for working with formulas, expressions, calls and other R
     objects
-Version: 1.5
-Date: 2014-11-05
+Version: 1.5.1
+Date: 2015-05-25
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
 Description: This package provides a number of useful utilities for working
@@ -23,7 +23,7 @@ URL: https://github.com/decisionpatterns/formula.tools
 BugReports: https://github.com/decisionpatterns/formula.tools/issues
 LazyLoad: yes
 LazyData: yes
-Roxygen: list( wrap=TRUE )
+# Roxygen: list( wrap=TRUE )
 Collate:
     'as.character.formula.R'
     'catcont.R'
