--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,15 @@
 Package: formula.tools
 Type: Package
-Title: Utilities for working with formulas, expressions, calls and other R
-    objects
-Version: 1.5.1
+Title: Utilities for Formulas, Expressions, Calls and Other Objects
+Version: 1.5.2
 Date: 2015-05-25
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
-Description: 'formula.tools' provides a number of useful utilities for working
-    with formulas, expressions, calls, names, symbols and other R objects.
-    This package was designed to greatly facilitate symbolic manupulation using
-    native R objects.
+Description: These utilities facilitate the programmatic manipulations of
+    formulas, expressions,calls, names, symbols and other objects.
 Depends:
-    R (>= 2.14.0),
-    operator.tools(>= 1.2.1),
+    R (>= 3.0.0),
+    operator.tools(>= 1.4.0),
     utils,
     methods
 Suggests:
@@ -23,7 +20,6 @@ URL: https://github.com/decisionpatterns/formula.tools
 BugReports: https://github.com/decisionpatterns/formula.tools/issues
 LazyLoad: yes
 LazyData: yes
-# Roxygen: list( wrap=TRUE )
 Collate:
     'as.character.formula.R'
     'catcont.R'
