--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,11 @@ Date: 2017-02-27
 Author: Christopher Brown
 Maintainer: Christopher Brown <chris.brown@decisionpatterns.com>
 Description: These utilities facilitate the programmatic manipulations of
-    formulas, expressions, calls, names, symbols and other objects. These 
-    objects all share the same structure: a left-hand side operator and 
-    right-hand side. This packages provides methods for accessing and modifying
-    the structures as well as extracting names and symbols from these objects.
+    formulas, expressions, calls, names, symbols and other R language objects. 
+    These objects all share the same structure: a left-hand side (lhs), an 
+    operator (op) and right-hand side (rhs). This packages provides methods for 
+    accessing and modifying this structures as well as extracting and replacing 
+    names and symbols from these objects.
 Depends:
     R (>= 3.0.0),
     operator.tools(>= 1.4.0),
