--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: formula.tools
 Type: Package
 Title: Utilities for Formulas, Expressions, Calls and Other Objects
-Version: 1.6.2
-Date: 2017-03-14
+Version: 1.6.4
+Date: 2017-07-20
 Authors@R: c(
     person("Christopher", "Brown", , "chris.brown@decisionpatterns.com", c("aut", "cre") ),
     person("Decision Patterns", role = "cph")
@@ -14,7 +14,8 @@ Description: These utilities facilitate the programmatic manipulations of
     accessing and modifying this structures as well as extracting and replacing 
     names and symbols from these objects.
 Depends:
-    R (>= 3.0.0),
+    R (>= 3.0.0)
+Imports:
     operator.tools(>= 1.4.0),
     utils,
     methods
