--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: formula.tools
 Type: Package
-Title: Utilities for Formulas, Expressions, Calls and Other Objects
-Version: 1.6.5
-Date: 2017-09-20
+Title: Programmatic Utilities for Manipulating Formulas, Expressions, Calls, Assignments and 
+    Other R Objects
+Version: 1.6.8
+Date: 2017-09-21
 Authors@R: c(
     person("Christopher", "Brown", , "chris.brown@decisionpatterns.com", c("aut", "cre") ),
     person("Decision Patterns", role = "cph")
     )
 Description: These utilities facilitate the programmatic manipulations of
-    formulas, expressions, calls, names, symbols and other R language objects. 
-    These objects all share the same structure: a left-hand side (lhs), an 
-    operator (op) and right-hand side (rhs). This packages provides methods for 
-    accessing and modifying this structures as well as extracting and replacing 
-    names and symbols from these objects.
+    formulas, expressions, calls, assignments and other R language objects. 
+    These objects all share the same structure: a left-hand side, operator and 
+    right-hand side. This packages provides methods for accessing and 
+    modifying this structures as well as extracting and replacing names and 
+    symbols from these objects.
 Depends:
     R (>= 3.0.0)
 Imports:
