Add split.terms and toggle.sign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(op)
 export(op.type)
 export(rhs)
 export(rhs.vars)
+export(split.terms)
 export(which.cat)
 export(which.cont)
 exportMethods(get.vars)
