--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: formula.tools
 Type: Package
 Title: Programmatic Utilities for Manipulating Formulas, Expressions, Calls, Assignments and 
     Other R Objects
-Version: 1.6.8
-Date: 2017-09-21
+Version: 1.7.0
+Date: 2018-02-22
 Authors@R: c(
     person("Christopher", "Brown", , "chris.brown@decisionpatterns.com", c("aut", "cre") ),
     person("Decision Patterns", role = "cph")
@@ -46,7 +46,10 @@ Collate:
     'parts.rhs.get.R'
     'parts.rhs.set.R'
     'rhs.vars.R'
+    'split.terms.R'
     'terms.R'
+    'toggle.sign.R'
     'zzz.R'
 RoxygenNote: 6.0.1.9000
 Repository: CRAN
+Encoding: UTF-8
