Remove catcont; fix tests; update README.md

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,22 @@
 
 S3method(as.character,formula)
 S3method(env,formula)
+S3method(split_terms,"(")
+S3method(split_terms,default)
+S3method(split_terms,name)
 S3method(terms,call)
 S3method(terms,expression)
+S3method(toggle.sign,"(")
+S3method(toggle.sign,call)
+S3method(toggle.sign,default)
+S3method(toggle.sign,expression)
+S3method(toggle.sign,name)
 export("lhs<-")
 export("op<-")
 export("rhs<-")
 export(env)
 export(get.vars)
 export(invert)
-export(is.cat)
-export(is.cont)
 export(is.one.sided)
 export(is.two.sided)
 export(lhs)
@@ -20,9 +26,8 @@ export(op)
 export(op.type)
 export(rhs)
 export(rhs.vars)
-export(split.terms)
-export(which.cat)
-export(which.cont)
+export(split_terms)
+export(toggle.sign)
 exportMethods(get.vars)
 import(methods)
 import(operator.tools)
