--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,15 @@ S3method(split_terms,default)
 S3method(split_terms,name)
 S3method(terms,call)
 S3method(terms,expression)
-S3method(toggle.sign,"(")
-S3method(toggle.sign,call)
-S3method(toggle.sign,default)
-S3method(toggle.sign,expression)
-S3method(toggle.sign,name)
+S3method(toggle_sign,"(")
+S3method(toggle_sign,call)
+S3method(toggle_sign,default)
+S3method(toggle_sign,expression)
+S3method(toggle_sign,name)
 export("lhs<-")
 export("op<-")
 export("rhs<-")
+export(add_term)
 export(env)
 export(get.vars)
 export(invert)
@@ -27,7 +28,7 @@ export(op.type)
 export(rhs)
 export(rhs.vars)
 export(split_terms)
-export(toggle.sign)
+export(toggle_sign)
 exportMethods(get.vars)
 import(methods)
 import(operator.tools)
